--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,11 +12,72 @@
     <!-- custom css link -->
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <h1></h1>
+
+<body class="font-raleway ">
+    <!-- header part start -->
+    <header class="container mx-auto">
+        <!-- navbar part start -->
+        <nav>
+            <div class="navbar">
+                <div class="navbar-start">
+                    <div class="dropdown">
+                        <!-- for mobile menu icon -->
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </div>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-lg font-medium">
+                            <li><a>Home</a></li>
+                            <li><a>About</a></li>
+                            <li><a>Destination</a></li>
+                            <li><a>Search</a></li>
+                        </ul>
+                    </div>
+                    <!-- for mobile menu icon -->
+
+                    <!-- logo -->
+                    <a class="btn btn-ghost text-4xl font-extrabold">P-Ticket</a>
+                    <!-- logo -->
+                </div>
+                <!-- for large device -->
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1 text-lg font-medium">
+                        <li><a>Home</a></li>
+                        <li><a>About</a></li>
+                        <li><a>Destination</a></li>
+                        <li><a>Search</a></li>
+                    </ul>
+                </div>
+                <!-- for large device -->
+                <div class="navbar-end">
+                    <a class="btn bg-[#1DD1001A] border border-[#1DD10066]">Bus 
+                        <img src="images/bus-icon.png" alt="bus-logo">
+                    </a>
+                </div>
+            </div>
+        </nav>
+        <!-- navbar part end -->
 
 
+        <!-- banner part start -->
+        <div>
+            
+        </div>
+        <!-- banner part end -->
+    </header>
 
+
+    <!-- main part start -->
+    <main></main>
+
+
+    <!-- footer part start -->
+    <footer></footer>
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
