--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <!-- for large device -->
                 <div class="navbar-end">
-                    <a class="btn bg-[#1DD1001A] border border-[#1DD10066]">Bus 
+                    <a class="btn bg-[#1DD1001A] border border-[#1DD10066]">Bus
                         <img src="images/bus-icon.png" alt="bus-logo">
                     </a>
                 </div>
@@ -65,9 +65,53 @@
 
         <!-- banner part start -->
         <div>
-            
+            <div class="hero rounded-2xl text-white" style="background-image: url(images/banner.png);">
+                <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
+                <div class="hero-content text-center pt-20 pb-32">
+                    <div class="max-w-2xl">
+                        <h1 class="mb-5 text-6xl font-extrabold">End-to-End Travel with <span class="text-[#1DD100]">P
+                                Paribahan</span></h1>
+                        <p class="mb-8 font-inter text-lg">Yes, you can run unit tests and view the results directly
+                            within the app. The integrated testing features allow for a streamlined .</p>
+                        <button class="btn bg-[#1DD100] border-[#1DD100] font-bold text-xl text-[#030712]">Buy
+                            Tickets</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <!-- banner part end -->
+
+        <!-- stats part start -->
+        <div class="font-inter rounded-3xl flex justify-between w-4/5 mx-auto relative -mt-14 z-10 mb-28">
+            <div class="flex justify-between gap-4 py-8 px-12 bg-white border-b-4 border-[#1DD100] rounded-3xl">
+                <div>
+                    <img src="images/people.png" alt="people">
+                </div>
+                <div>
+                    <h3 class="text-4xl font-bold">500K+</h3>
+                    <h4 class="text-lg">Registered users</h4>
+                </div>
+            </div>
+            <div class="flex justify-between gap-4 py-8 px-12 bg-white border-b-4 border-[#1DD100] rounded-3xl">
+                <div>
+                    <img src="images/ticket-cupon.png" alt="ticket-cupon">
+                </div>
+                <div>
+                    <h3 class="text-4xl font-bold">1.7 lacks</h3>
+                    <h4 class="text-lg">Tickets sold</h4>
+                </div>
+            </div>
+            <div class="flex justify-between gap-4 py-8 px-12 bg-white border-b-4 border-[#1DD100] rounded-3xl">
+                <div>
+                    <img src="images/stoppage.png" alt="stoppage">
+                </div>
+                <div>
+                    <h3 class="text-4xl font-bold">80K+</h3>
+                    <h4 class="text-lg">Rental partners</h4>
+                </div>
+            </div>
+        </div>
+        <!-- stats part end -->
     </header>
 
 
