--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="font-raleway ">
+<body class="font-raleway">
     <!-- header part start -->
     <header class="container mx-auto">
         <!-- navbar part start -->
@@ -116,7 +116,27 @@
 
 
     <!-- main part start -->
-    <main></main>
+    <main>
+        <!-- best offer part start -->
+        <section class="container mx-auto">
+            <h2 class="text-4xl font-bold text-[#030712] text-center mb-12">Best offers for you</h2>
+            <!-- coupons -->
+            <div class="flex justify-between font-inter bg-[#FFBF0F] items-center">
+                <div>
+                    <h2 class="font-black text-4xl text-[#030712CC]">15% OFF</h2>
+                    <h3 class="font-semibold text-xl text-[#030712CC]">on your next purchase</h3>
+                    <p class="font-medium text-lg text-[#03071280]">use by January 2024</p>
+                </div>
+                <img src="images/cupon-devider.png" alt="cupon-devider">
+                <div>
+                    <h1 class="text-3xl font-semibold text-[#030712] font-raleway">NEW15</h1>
+                    <h4 class="text-xl font-medium text-[#03071266]">Coupon Code</h4>
+                </div>
+            </div>
+            <!-- coupons -->
+        </section>
+        <!-- best offer part end -->
+    </main>
 
 
     <!-- footer part start -->
