--- a/index.html
+++ b/index.html
@@ -82,32 +82,32 @@
         <!-- banner part end -->
 
         <!-- stats part start -->
-        <div class="font-inter rounded-3xl flex justify-between w-4/5 mx-auto relative -mt-14 z-10 mb-28">
-            <div class="flex justify-between gap-4 py-8 px-12 bg-white border-b-4 border-[#1DD100] rounded-3xl">
-                <div>
-                    <img src="images/people.png" alt="people">
+        <div class="font-inter text-center lg:text-left lg:rounded-3xl flex justify-between gap-2 lg:gap-6 w-11/12 lg:w-4/5 mx-auto relative -mt-14 z-10 mb-28">
+            <div class="flex flex-col lg:flex-row lg:justify-between w-1/3 gap-4 py-4 lg:py-8 px-2 lg:px-12 bg-white border-b-4 border-[#1DD100] rounded-3xl">
+                <div class="mx-auto">
+                    <img class="w-8 lg:w-full" src="images/people.png" alt="people">
                 </div>
                 <div>
-                    <h3 class="text-4xl font-bold">500K+</h3>
-                    <h4 class="text-lg">Registered users</h4>
-                </div>
-            </div>
-            <div class="flex justify-between gap-4 py-8 px-12 bg-white border-b-4 border-[#1DD100] rounded-3xl">
-                <div>
-                    <img src="images/ticket-cupon.png" alt="ticket-cupon">
-                </div>
-                <div>
-                    <h3 class="text-4xl font-bold">1.7 lacks</h3>
-                    <h4 class="text-lg">Tickets sold</h4>
+                    <h3 class="text-base lg:text-4xl font-bold">500K+</h3>
+                    <h4 class="text-sm lg:text-lg">Registered users</h4>
                 </div>
             </div>
-            <div class="flex justify-between gap-4 py-8 px-12 bg-white border-b-4 border-[#1DD100] rounded-3xl">
-                <div>
-                    <img src="images/stoppage.png" alt="stoppage">
+            <div class="flex flex-col lg:flex-row lg:justify-between w-1/3  gap-4 py-4 lg:py-8 px-2 lg:px-12 bg-white border-b-4 border-[#1DD100] rounded-3xl">
+                <div class="mx-auto">
+                    <img class="w-8 lg:w-full" src="images/ticket-cupon.png" alt="ticket-coupon">
                 </div>
                 <div>
-                    <h3 class="text-4xl font-bold">80K+</h3>
-                    <h4 class="text-lg">Rental partners</h4>
+                    <h3 class="text-base lg:text-4xl font-bold">1.7 lacks</h3>
+                    <h4 class="text-sm lg:text-lg">Tickets sold</h4>
+                </div>
+            </div>
+            <div class="flex flex-col lg:flex-row lg:justify-between w-1/3  gap-4 py-4 lg:py-8 px-2 lg:px-12 bg-white border-b-4 border-[#1DD100] rounded-3xl">
+                <div class="mx-auto">
+                    <img class="w-8 lg:w-full" src="images/stoppage.png" alt="stoppage">
+                </div>
+                <div>
+                    <h3 class="text-base lg:text-4xl font-bold">80K+</h3>
+                    <h4 class="text-sm lg:text-lg">Rental partners</h4>
                 </div>
             </div>
         </div>
@@ -121,36 +121,36 @@
         <section class="container mx-auto mb-28">
             <h2 class="text-4xl font-bold text-[#030712] text-center mb-12">Best offers for you</h2>
             <!-- coupons -->
-            <div class="grid grid-cols-2 gap-6 mb-14">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-14">
                 <!-- 1st coupon -->
-                <div class="flex justify-between font-inter bg-[#FFBF0F] items-center px-14 rounded-3xl">
+                <div class="flex lg:justify-between font-inter bg-[#FFBF0F] items-center px-4 lg:px-14 rounded-3xl mx-4 lg:mx-0">
                     <div class="">
-                        <h2 class="font-black text-4xl text-[#030712CC]">15% OFF</h2>
-                        <h3 class="font-semibold text-xl text-[#030712CC]">on your next purchase</h3>
-                        <p class="font-medium text-lg text-[#03071280]">use by January 2024</p>
+                        <h2 class="font-black text-2xl lg:text-4xl text-[#030712CC]">15% OFF</h2>
+                        <h3 class="font-semibold text-base lg:text-xl text-[#030712CC]">on your next purchase</h3>
+                        <p class="font-medium text-base lg:text-lg text-[#03071280]">use by January 2024</p>
                     </div>
                     <img src="images/cupon-devider.png" alt="cupon-devider">
                     <div>
-                        <h1 class="text-3xl font-semibold text-[#030712] font-raleway">NEW15</h1>
-                        <h4 class="text-xl font-medium text-[#03071266]">Coupon Code</h4>
+                        <h1 class="text-2xl lg:text-3xl font-semibold text-[#030712] font-raleway">NEW15</h1>
+                        <h4 class="text-base lg:text-xl font-medium text-[#03071266]">Coupon Code</h4>
                     </div>
                 </div>
                 <!-- 2nd coupon -->
-                <div class="flex justify-between font-inter bg-[#FFBF0F] items-center px-14 rounded-3xl">
+                <div class="flex lg:justify-between font-inter bg-[#F78C9C] items-center px-4 lg:px-14 rounded-3xl mx-4 lg:mx-0">
                     <div class="">
-                        <h2 class="font-black text-4xl text-[#030712CC]">20% OFF</h2>
-                        <h3 class="font-semibold text-xl text-[#030712CC]">on your next purchase</h3>
-                        <p class="font-medium text-lg text-[#03071280]">use by January 2024</p>
+                        <h2 class="font-black text-2xl lg:text-4xl text-[#030712CC]">20% OFF</h2>
+                        <h3 class="font-semibold text-base lg:text-xl text-[#030712CC]">on your next purchase</h3>
+                        <p class="font-medium text-base lg:text-lg text-[#03071280]">use by January 2024</p>
                     </div>
-                    <img src="images/cupon-devider.png" alt="cupon-devider">
+                    <img src="images/cupon-devider.png" alt="coupon-divider">
                     <div>
-                        <h1 class="text-3xl font-semibold text-[#030712] font-raleway">Couple 20</h1>
-                        <h4 class="text-xl font-medium text-[#03071266]">Coupon Code</h4>
+                        <h1 class="text-2xl lg:text-3xl font-semibold text-[#030712] font-raleway">Couple 20</h1>
+                        <h4 class="text-base lg:text-xl font-medium text-[#03071266]">Coupon Code</h4>
                     </div>
                 </div>
             </div>
             <div class="flex justify-center">
-                <button class="btn mx-auto">See All Offers</button>
+                <button class="btn mx-auto text-[#1DD100] bg-white border-[#1DD100]">See All Offers</button>
             </div>
             <!-- coupons -->
         </section>
