--- a/index.html
+++ b/index.html
@@ -69,12 +69,17 @@
                 <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
                 <div class="hero-content text-center pt-20 pb-32">
                     <div class="max-w-2xl">
-                        <h1 class="mb-5 text-2xl lg:text-6xl font-extrabold">End-to-End Travel with <br><span class="text-[#1DD100]">P
+                        <h1 class="mb-5 text-2xl lg:text-6xl font-extrabold">End-to-End Travel with <br><span
+                                class="text-[#1DD100]">P
                                 Paribahan</span></h1>
-                        <p class="mb-8 font-inter text-sm lg:text-lg">Yes, you can run unit tests and view the results directly
+                        <p class="mb-8 font-inter text-sm lg:text-lg">Yes, you can run unit tests and view the results
+                            directly
                             within the app. The integrated testing features allow for a streamlined .</p>
-                        <button class="btn bg-[#1DD100] border-[#1DD100] font-bold text-xl text-[#030712]">Buy
-                            Tickets</button>
+                        <button id="banner-btn"
+                            class="btn bg-[#1DD100] border-[#1DD100] font-bold text-xl text-[#030712]">
+                            <!-- <a href="#ph-paribahan">Buy Tickets</a> -->
+                            Buy Tickets
+                        </button>
                     </div>
                 </div>
             </div>
@@ -82,8 +87,10 @@
         <!-- banner part end -->
 
         <!-- stats part start -->
-        <div class="font-inter text-center lg:text-left lg:rounded-3xl flex justify-between gap-2 lg:gap-6 w-11/12 lg:w-4/5 mx-auto relative -mt-14 z-10 mb-28">
-            <div class="flex flex-col lg:flex-row lg:justify-between w-1/3 gap-4 py-4 lg:py-8 px-2 lg:px-12 bg-white border-b-4 border-[#1DD100] rounded-3xl">
+        <div
+            class="font-inter text-center lg:text-left lg:rounded-3xl flex justify-between gap-2 lg:gap-6 w-11/12 lg:w-4/5 mx-auto relative -mt-14 z-10 mb-28">
+            <div
+                class="flex flex-col lg:flex-row lg:justify-between w-1/3 gap-4 py-4 lg:py-8 px-2 lg:px-12 bg-white border-b-4 border-[#1DD100] rounded-3xl">
                 <div class="mx-auto">
                     <img class="w-8 lg:w-full" src="images/people.png" alt="people">
                 </div>
@@ -92,7 +99,8 @@
                     <h4 class="text-sm lg:text-lg">Registered users</h4>
                 </div>
             </div>
-            <div class="flex flex-col lg:flex-row lg:justify-between w-1/3  gap-4 py-4 lg:py-8 px-2 lg:px-12 bg-white border-b-4 border-[#1DD100] rounded-3xl">
+            <div
+                class="flex flex-col lg:flex-row lg:justify-between w-1/3  gap-4 py-4 lg:py-8 px-2 lg:px-12 bg-white border-b-4 border-[#1DD100] rounded-3xl">
                 <div class="mx-auto">
                     <img class="w-8 lg:w-full" src="images/ticket-cupon.png" alt="ticket-coupon">
                 </div>
@@ -101,7 +109,8 @@
                     <h4 class="text-sm lg:text-lg">Tickets sold</h4>
                 </div>
             </div>
-            <div class="flex flex-col lg:flex-row lg:justify-between w-1/3  gap-4 py-4 lg:py-8 px-2 lg:px-12 bg-white border-b-4 border-[#1DD100] rounded-3xl">
+            <div
+                class="flex flex-col lg:flex-row lg:justify-between w-1/3  gap-4 py-4 lg:py-8 px-2 lg:px-12 bg-white border-b-4 border-[#1DD100] rounded-3xl">
                 <div class="mx-auto">
                     <img class="w-8 lg:w-full" src="images/stoppage.png" alt="stoppage">
                 </div>
@@ -123,7 +132,8 @@
             <!-- coupons -->
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-14">
                 <!-- 1st coupon -->
-                <div class="flex lg:justify-between font-inter bg-[#FFBF0F] items-center px-4 lg:px-14 rounded-3xl mx-4 lg:mx-0">
+                <div
+                    class="flex lg:justify-between font-inter bg-[#FFBF0F] items-center px-4 lg:px-14 rounded-3xl mx-4 lg:mx-0">
                     <div class="">
                         <h2 class="font-black text-2xl lg:text-4xl text-[#030712CC]">15% OFF</h2>
                         <h3 class="font-semibold text-base lg:text-xl text-[#030712CC]">on your next purchase</h3>
@@ -136,7 +146,8 @@
                     </div>
                 </div>
                 <!-- 2nd coupon -->
-                <div class="flex lg:justify-between font-inter bg-[#F78C9C] items-center px-4 lg:px-14 rounded-3xl mx-4 lg:mx-0">
+                <div
+                    class="flex lg:justify-between font-inter bg-[#F78C9C] items-center px-4 lg:px-14 rounded-3xl mx-4 lg:mx-0">
                     <div class="">
                         <h2 class="font-black text-2xl lg:text-4xl text-[#030712CC]">20% OFF</h2>
                         <h3 class="font-semibold text-base lg:text-xl text-[#030712CC]">on your next purchase</h3>
@@ -155,6 +166,35 @@
             <!-- coupons -->
         </section>
         <!-- best offer part end -->
+
+
+        <!-- P.H Paribahan part start -->
+        <section id="ph-paribahan" class="container mx-auto">
+            <h2 class="text-4xl font-bold text-[#030712] text-center mb-6">P.H Paribahan</h2>
+            <p class="text-lg text-center font-inter w-1/2 mx-auto text-[#03071299] mb-12">Yes, you can run unit tests
+                and view the results directly within the app. The integrated testing features allow for a streamlined .
+            </p>
+
+            <div class="flex justify-between">
+                <div class="flex justify-between gap-3">
+                    <img src="images/bus-logo.png" alt="bus-logo">
+                    <div>
+                        <h2>Greenline Paribahan</h2>
+                        <p>Coach-009-WEB ! AC_Business</p>
+                    </div>
+                </div>
+                <button class="btn">40 Seats left</button>
+            </div>
+            <div>
+                <h3>Route <span>Dhaka - Sylhet</span></h3>
+                <h3>Departure Time <span>9:00 PM</span></h3>
+                <button class="btn">Boarding Point - Laxmipur</button>
+                <button class="btn">Dropping Point - Bogura</button>
+                <button class="btn">Est. Time - 11 Hour</button>
+            </div>
+            </div>
+        </section>
+        <!-- P.H Paribahan part end -->
     </main>
 
 
