--- a/index.html
+++ b/index.html
@@ -169,29 +169,62 @@
 
 
         <!-- P.H Paribahan part start -->
-        <section id="ph-paribahan" class="container mx-auto">
-            <h2 class="text-4xl font-bold text-[#030712] text-center mb-6">P.H Paribahan</h2>
-            <p class="text-lg text-center font-inter w-1/2 mx-auto text-[#03071299] mb-12">Yes, you can run unit tests
-                and view the results directly within the app. The integrated testing features allow for a streamlined .
-            </p>
+        <section id="ph-paribahan" class="bg-[#F7F8F8] border-t-2 border-[#1DD100] rounded-t-[70px] pt-28">
+            <div class="container mx-auto">
+                <h2 class="text-4xl font-bold text-[#030712] text-center mb-6">P.H Paribahan</h2>
+                <p class="text-lg text-center font-inter w-1/2 mx-auto text-[#03071299] mb-12">Yes, you can run unit
+                    tests
+                    and view the results directly within the app. The integrated testing features allow for a
+                    streamlined .
+                </p>
 
-            <div class="flex justify-between">
-                <div class="flex justify-between gap-3">
-                    <img src="images/bus-logo.png" alt="bus-logo">
-                    <div>
-                        <h2>Greenline Paribahan</h2>
-                        <p>Coach-009-WEB ! AC_Business</p>
+                <!-- PH info start -->
+                <div class="grid grid-cols-12 gap-6 bg-white mb-7">
+                    <div class="col-span-8 p-7">
+                        <!-- info heading -->
+                        <div class="flex justify-between">
+                            <div class="flex justify-between gap-3">
+                                <img src="images/bus-logo.png" alt="bus-logo">
+                                <div>
+                                    <h2 class="text-3xl font-bold text-[#030712]">Greenline Paribahan</h2>
+                                    <p class="text-lg font-inter text-[#03071299]">Coach-009-WEB ! AC_Business</p>
+                                </div>
+                            </div>
+                            <button class="btn bg-[#1DD10026]">
+                                <img src="images/seat-green.png" alt="seat-green">
+                                <span class="font-inter font-medium text-lg text-[#1DD100]"><span
+                                        id="seat-left">40</span> Seats left</span>
+                            </button>
+                        </div>
+                        <!-- info details -->
+                        <div class="bg-[#F7F8F8] p-7 rounded-3xl mt-6">
+                            <h3
+                                class="font-semibold text-lg text-[#03071299] border-b border-dashed border-[#03071233] pb-6">
+                                Route <span class="text-[#030712] float-right">Dhaka - Sylhet</span></h3>
+                            <h3
+                                class="font-semibold text-lg text-[#03071299] border-b border-dashed border-[#03071233] py-6 mb-6">
+                                Departure Time <span class="text-[#030712] float-right">9:00 PM</span></h3>
+                            <div class="text-center space-x-6">
+                                <button class="btn font-inter font-medium text-[#030712CC] bg-[#0307120D]">Boarding
+                                    Point - Laxmipur</button>
+                                <button class="btn font-inter font-medium text-[#030712CC] bg-[#0307120D]">Dropping
+                                    Point - Bogura</button>
+                                <button class="btn font-inter font-medium text-[#030712CC] bg-[#0307120D]">Est. Time -
+                                    11 Hour</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-span-1">
+                        <img src="images/info-devider.png" alt="info-devider">
+                    </div>
+                    <!-- info right -->
+                    <div class="col-span-3 flex flex-col items-center justify-center">
+                        <img src="images/fare.png" alt="fare">
+                        <h2 class="text-3xl font-bold text-[#030712] mt-6 mb-2">550 Taka</h2>
+                        <p class="text-2xl font-semibold text-[#03071299]">Per Seat</p>
                     </div>
                 </div>
-                <button class="btn">40 Seats left</button>
-            </div>
-            <div>
-                <h3>Route <span>Dhaka - Sylhet</span></h3>
-                <h3>Departure Time <span>9:00 PM</span></h3>
-                <button class="btn">Boarding Point - Laxmipur</button>
-                <button class="btn">Dropping Point - Bogura</button>
-                <button class="btn">Est. Time - 11 Hour</button>
-            </div>
+                <!-- PH info start -->
             </div>
         </section>
         <!-- P.H Paribahan part end -->
@@ -199,7 +232,35 @@
 
 
     <!-- footer part start -->
-    <footer></footer>
+    <footer class="py-10 bg-[#030712]">
+        <div class="container mx-auto flex justify-between pb-12 border-b border-dashed border-[#FFFFFF4D]">
+            <div>
+                <a href="" class="text-4xl font-extrabold text-white">P-Ticket</a>
+                <p class="font-inter text-lg text-[#FFFFFFCC] w-2/3 pt-4">P-Ticket is a digital platform to make your
+                    daily commuting better.</p>
+            </div>
+            <div>
+                <h6 class="text-xl font-semibold text-white mb-5">Download our app</h6>
+                <div class="grid grid-flow-col gap-4 float-right">
+                    <img src="images/download-icon.png" alt="download-icon">
+                </div>
+            </div>
+        </div>
+
+        <!-- copyright part stat -->
+        <div class="container mx-auto flex justify-between items-center py-4">
+            <div>
+                <p class="text-[#FFFFFFB2] font-inter">@all rights reserved, P-Ticket services limited.2024</p>
+            </div>
+            <div>
+                <ul class="text-[#FFFFFF] font-medium font-inter flex justify-between gap-8">
+                    <li><a href="">Terms & condition</a></li>
+                    <li><a href="">Return & refund policy</a></li>
+                    <li><a href="">Privacy policy</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     <script src="js/scripts.js"></script>
 </body>
 
