made footer responsive

--- a/index.html
+++ b/index.html
@@ -232,28 +232,28 @@
 
 
     <!-- footer part start -->
-    <footer class="py-10 bg-[#030712]">
-        <div class="container mx-auto flex justify-between pb-12 border-b border-dashed border-[#FFFFFF4D]">
+    <footer class="py-10 bg-[#030712] px-4 lg:px-0">
+        <div class="container mx-auto flex flex-col lg:flex-row justify-between pb-12 border-b border-dashed border-[#FFFFFF4D]">
             <div>
                 <a href="" class="text-4xl font-extrabold text-white">P-Ticket</a>
-                <p class="font-inter text-lg text-[#FFFFFFCC] w-2/3 pt-4">P-Ticket is a digital platform to make your
+                <p class="font-inter text-lg text-[#FFFFFFCC] lg:w-2/3 pt-4 mb-6 lg:mb-0">P-Ticket is a digital platform to make your
                     daily commuting better.</p>
             </div>
-            <div>
+            <div class="">
                 <h6 class="text-xl font-semibold text-white mb-5">Download our app</h6>
-                <div class="grid grid-flow-col gap-4 float-right">
-                    <img src="images/download-icon.png" alt="download-icon">
+                <div>
+                    <a href=""><img src="images/download-icon.png" alt="download-icon"></a>
                 </div>
             </div>
         </div>
 
         <!-- copyright part stat -->
-        <div class="container mx-auto flex justify-between items-center py-4">
-            <div>
+        <div class="container mx-auto flex flex-col lg:flex-row justify-between lg:items-center py-4">
+            <div class="mb-6 lg:mb-0">
                 <p class="text-[#FFFFFFB2] font-inter">@all rights reserved, P-Ticket services limited.2024</p>
             </div>
             <div>
-                <ul class="text-[#FFFFFF] font-medium font-inter flex justify-between gap-8">
+                <ul class="text-[#FFFFFF] font-medium font-inter flex flex-col lg:flex-row justify-between gap-4 lg:gap-8">
                     <li><a href="">Terms & condition</a></li>
                     <li><a href="">Return & refund policy</a></li>
                     <li><a href="">Privacy policy</a></li>
