--- a/index.html
+++ b/index.html
@@ -123,51 +123,49 @@
         <!-- stats part end -->
     </header>
 
+    <!-- best offer part start -->
+    <section class="container mx-auto mb-28">
+        <h2 class="text-4xl font-bold text-[#030712] text-center mb-12">Best offers for you</h2>
+        <!-- coupons -->
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-14">
+            <!-- 1st coupon -->
+            <div
+                class="flex lg:justify-between font-inter bg-[#FFBF0F] items-center px-4 lg:px-14 rounded-3xl mx-4 lg:mx-0">
+                <div class="">
+                    <h2 class="font-black text-2xl lg:text-4xl text-[#030712CC]">15% OFF</h2>
+                    <h3 class="font-semibold text-base lg:text-xl text-[#030712CC]">on your next purchase</h3>
+                    <p class="font-medium text-base lg:text-lg text-[#03071280]">use by January 2024</p>
+                </div>
+                <img src="images/cupon-devider.png" alt="cupon-devider">
+                <div>
+                    <h1 class="text-2xl lg:text-3xl font-semibold text-[#030712] font-raleway">NEW15</h1>
+                    <h4 class="text-base lg:text-xl font-medium text-[#03071266]">Coupon Code</h4>
+                </div>
+            </div>
+            <!-- 2nd coupon -->
+            <div
+                class="flex lg:justify-between font-inter bg-[#F78C9C] items-center px-4 lg:px-14 rounded-3xl mx-4 lg:mx-0">
+                <div class="">
+                    <h2 class="font-black text-2xl lg:text-4xl text-[#030712CC]">20% OFF</h2>
+                    <h3 class="font-semibold text-base lg:text-xl text-[#030712CC]">on your next purchase</h3>
+                    <p class="font-medium text-base lg:text-lg text-[#03071280]">use by January 2024</p>
+                </div>
+                <img src="images/cupon-devider.png" alt="coupon-divider">
+                <div>
+                    <h1 class="text-2xl lg:text-3xl font-semibold text-[#030712] font-raleway">Couple 20</h1>
+                    <h4 class="text-base lg:text-xl font-medium text-[#03071266]">Coupon Code</h4>
+                </div>
+            </div>
+        </div>
+        <div class="flex justify-center">
+            <button class="btn mx-auto text-[#1DD100] bg-white border-[#1DD100]">See All Offers</button>
+        </div>
+        <!-- coupons -->
+    </section>
+    <!-- best offer part end -->
 
     <!-- main part start -->
-    <main>
-        <!-- best offer part start -->
-        <section class="container mx-auto mb-28">
-            <h2 class="text-4xl font-bold text-[#030712] text-center mb-12">Best offers for you</h2>
-            <!-- coupons -->
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-14">
-                <!-- 1st coupon -->
-                <div
-                    class="flex lg:justify-between font-inter bg-[#FFBF0F] items-center px-4 lg:px-14 rounded-3xl mx-4 lg:mx-0">
-                    <div class="">
-                        <h2 class="font-black text-2xl lg:text-4xl text-[#030712CC]">15% OFF</h2>
-                        <h3 class="font-semibold text-base lg:text-xl text-[#030712CC]">on your next purchase</h3>
-                        <p class="font-medium text-base lg:text-lg text-[#03071280]">use by January 2024</p>
-                    </div>
-                    <img src="images/cupon-devider.png" alt="cupon-devider">
-                    <div>
-                        <h1 class="text-2xl lg:text-3xl font-semibold text-[#030712] font-raleway">NEW15</h1>
-                        <h4 class="text-base lg:text-xl font-medium text-[#03071266]">Coupon Code</h4>
-                    </div>
-                </div>
-                <!-- 2nd coupon -->
-                <div
-                    class="flex lg:justify-between font-inter bg-[#F78C9C] items-center px-4 lg:px-14 rounded-3xl mx-4 lg:mx-0">
-                    <div class="">
-                        <h2 class="font-black text-2xl lg:text-4xl text-[#030712CC]">20% OFF</h2>
-                        <h3 class="font-semibold text-base lg:text-xl text-[#030712CC]">on your next purchase</h3>
-                        <p class="font-medium text-base lg:text-lg text-[#03071280]">use by January 2024</p>
-                    </div>
-                    <img src="images/cupon-devider.png" alt="coupon-divider">
-                    <div>
-                        <h1 class="text-2xl lg:text-3xl font-semibold text-[#030712] font-raleway">Couple 20</h1>
-                        <h4 class="text-base lg:text-xl font-medium text-[#03071266]">Coupon Code</h4>
-                    </div>
-                </div>
-            </div>
-            <div class="flex justify-center">
-                <button class="btn mx-auto text-[#1DD100] bg-white border-[#1DD100]">See All Offers</button>
-            </div>
-            <!-- coupons -->
-        </section>
-        <!-- best offer part end -->
-
-
+    <main class="bg-[#F7F8F8]">
         <!-- P.H Paribahan part start -->
         <section id="ph-paribahan" class="bg-[#F7F8F8] border-t-2 border-[#1DD100] rounded-t-[70px] pt-28">
             <div class="container mx-auto">
@@ -179,7 +177,7 @@
                 </p>
 
                 <!-- PH info start -->
-                <div class="grid grid-cols-12 gap-6 bg-white mb-7">
+                <div class="grid grid-cols-12 gap-6 bg-white rounded-3xl mb-7">
                     <div class="col-span-8 p-7">
                         <!-- info heading -->
                         <div class="flex justify-between">
@@ -228,15 +226,142 @@
             </div>
         </section>
         <!-- P.H Paribahan part end -->
+
+
+        <!-- P.H main part start -->
+        <section class="bg-[#F7F8F8] mt-6">
+            <div class="pt-14 bg-white p-8 flex container mx-auto rounded-3xl">
+                <!-- ph-main left -->
+                <div class="border-r border-dashed border-[#0307124D] pr-8 w-[60%]">
+                    <h3 class="text-2xl font-semibold pb-6 border-b border-dashed border-[#03071233]">Select Your Seat
+                    </h3>
+                    <div class="flex justify-between py-5 border-b border-dashed border-[#03071233]">
+                        <span class="flex gap-2">
+                            <img src="images/seat-gray.png" alt="seat-gray">
+                            <h5>Available</h5>
+                        </span>
+                        <span class="flex gap-2">
+                            <img src="images/seat-green-filled.png" alt="seat-green-filled">
+                            <h5>Selected</h5>
+                        </span>
+                    </div>
+
+                    <!-- seat layout start -->
+                    <div class="space-y-6">
+                        <div class="mt-6 flex justify-between">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div class="bg-[#0307121A] px-9 py-4 rounded-xl">
+                                <img src="images/tabler-icon-steering-wheel.svg" alt="steering-wheel">
+                            </div>
+                        </div>
+                        <div class="flex justify-between gap-8">
+                            <p class="px-10 py-4">A</p>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">A1</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">A3</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">A2</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">A4</h2>
+                        </div>
+                        <div class="flex justify-between gap-8">
+                            <p class="px-10 py-4">B</p>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">B1</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">B3</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">B2</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">B4</h2>
+                        </div>
+                        <div class="flex justify-between gap-8">
+                            <p class="px-10 py-4">C</p>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">C1</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">C3</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">C2</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">C4</h2>
+                        </div>
+                        <div class="flex justify-between gap-8">
+                            <p class="px-10 py-4">D</p>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">D1</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">D3</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">D2</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">D4</h2>
+                        </div>
+                        <div class="flex justify-between gap-8">
+                            <p class="px-10 py-4">E</p>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">E1</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">E3</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">E2</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">E4</h2>
+                        </div>
+                        <div class="flex justify-between gap-8">
+                            <p class="px-10 py-4">F</p>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">F1</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">F3</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">F2</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">F4</h2>
+                        </div>
+                        <div class="flex justify-between gap-8">
+                            <p class="px-10 py-4">G</p>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">G1</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">G3</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">G2</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">G4</h2>
+                        </div>
+                        <div class="flex justify-between gap-8">
+                            <p class="px-10 py-4">H</p>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">H1</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">H3</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">H2</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">H4</h2>
+                        </div>
+                        <div class="flex justify-between gap-8">
+                            <p class="px-10 py-4">I</p>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">I1</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">I3</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">I2</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">I4</h2>
+                        </div>
+                        <div class="flex justify-between gap-8">
+                            <p class="px-10 py-4">J</p>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">J1</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">J3</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">J2</h2>
+                            <h2 class="bg-[#0307121A] px-10 py-4 rounded-xl">J4</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- ph-main right -->
+                <div class="pl-8 w-[40%]">
+                    <h3 class="text-2xl font-semibold pb-6 mb-6 border-b border-dashed border-[#03071233]">Select Your
+                        Seat</h3>
+
+                    <!-- calculation part start -->
+                    <div class="bg-[#F7F8F8] p-8 rounded-3xl">
+                        <div class="flex justify-between">
+                            <h2>Seat <span>2</span></h2>
+                            <h2>Class</h2>
+                            <h2>Price</h2>
+                        </div>
+                        <div class="flex justify-between">
+                            <h2>Seat <span>2</span></h2>
+                            <h2>Class</h2>
+                            <h2>Price</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- P.H main part end -->
     </main>
 
 
     <!-- footer part start -->
     <footer class="py-10 bg-[#030712] px-4 lg:px-0">
-        <div class="container mx-auto flex flex-col lg:flex-row justify-between pb-12 border-b border-dashed border-[#FFFFFF4D]">
+        <div
+            class="container mx-auto flex flex-col lg:flex-row justify-between pb-12 border-b border-dashed border-[#FFFFFF4D]">
             <div>
                 <a href="" class="text-4xl font-extrabold text-white">P-Ticket</a>
-                <p class="font-inter text-lg text-[#FFFFFFCC] lg:w-2/3 pt-4 mb-6 lg:mb-0">P-Ticket is a digital platform to make your
+                <p class="font-inter text-lg text-[#FFFFFFCC] lg:w-2/3 pt-4 mb-6 lg:mb-0">P-Ticket is a digital platform
+                    to make your
                     daily commuting better.</p>
             </div>
             <div class="">
@@ -253,7 +378,8 @@
                 <p class="text-[#FFFFFFB2] font-inter">@all rights reserved, P-Ticket services limited.2024</p>
             </div>
             <div>
-                <ul class="text-[#FFFFFF] font-medium font-inter flex flex-col lg:flex-row justify-between gap-4 lg:gap-8">
+                <ul
+                    class="text-[#FFFFFF] font-medium font-inter flex flex-col lg:flex-row justify-between gap-4 lg:gap-8">
                     <li><a href="">Terms & condition</a></li>
                     <li><a href="">Return & refund policy</a></li>
                     <li><a href="">Privacy policy</a></li>
